# recipebox_API

./: .env  .gitignore  README.md  pyproject.toml
backend/: alembic.ini  main.py  run_db.py
backend/alembic/: env.py
backend/alembic/versions/: 03fa7aa7f3d3_create_db.py  046574a94473_update_db.py  0b04dc1a7d3a_create_db.py  252ddb7f27c3_update_db.py  71847053608d_create_db.py  cf0a4ab0faf8_create_db.py  f71af3d8e713_create_db.py
backend/app/api/: api.py
backend/app/api/endpoints/: ingredient.py  recipe.py
backend/app/core/: config.py
backend/app/crud/: ingredient.py  recipe.py  recipe_ingredient.py  user.py
backend/app/db/: base.py  db_setup.py  init_db.py  init_recipe_ingredient.py
backend/app/models/: ingredient.py  mixin.py  recipe.py  recipe_ingredient.py  role.py  user.py
backend/app/schemas/: ingredient.py  recipe.py  recipe_ingredient.py  role.py  user.py
env/Scripts/: activate  activate.bat
